--- a/style.css
+++ b/style.css
@@ -66,11 +66,11 @@ body{
   }
   h2{
     text-align: center;
-    color:white;
+    color:burlywood
     }
   h3{
     text-align: center;
-    color: red;
+    color:red;
     }
     h1{
       text-align: center;
