--- a/style.css
+++ b/style.css
@@ -1,84 +1,183 @@
+*{
+  box-sizing: border-box;
+}
+
 body{
-    margin: 4px;
-    background-color:;
-  }
-  div{
-  border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 2px;
-    display: block;
-  }
-  .moderate{
-    float: left;
-    background-color: grey;
-  }
-  .impact{
-    float: right;
-    background-color: grey;
-  }
+  background-color: rgb(202, 61, 183);
+  font-family: sans-serif;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+
+
+
+.container{
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+gap: 20px;
+border-radius: 20px;
+width: 1200;
+margin: 3px;
+padding: 5px;
+border: rgb(247, 250, 250) 5px solid;
+justify-items: center;
+
+}
+
+
+.inputs{
+height: 80vh;
+border: rgb(4, 231, 15) 5px solid;
+border-radius: 20px;
+background-color: #f2f2f2;
+box-shadow: 12px 12px 10px rgb(104, 81, 81);
+
+}
+.input{
+  margin: 40px;
+  padding: 3px;
+  display: flex;
+  flex-direction: column;
+  border: rgb(247, 250, 250) 1px solid;
+
+}
+form{
+  
+  margin: 10px;
+  height: 60vh;
+}
+
+.inputs [type =number]{
+  width: 100%;
+  padding: 12p 20px;
+  margin: 8px 0;
+  height: 5vh;
+  display: inline-block;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.inputs [type =text], select{
+  width: 100%;
+  height: 5vh;
+  padding: 12p 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+.inputs [type =button]{
+width: 100%;
+background-color: #4caf50;
+color: white;
+padding: 12px 20px;
+margin: 8px 0;
+border: none;
+border-radius: 4px;
+cursor: pointer;
+}
+
+.extimate-container{
+display: flex;
+width: 950px;
+
+}
+.estimate{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  display: flex;
+  gap: 10px; 
+  border: rgb(247, 250, 250) 1px solid;
+  border-radius: 20px;
+  background-color: rgb(12, 240, 50);
+  margin: 10px;
+  width: 800px;
+  height: 80vh;
+  padding: 20px;
+
+ 
+}
+.o{
+ 
+  display: flex;
+
+}
+
+.estimate1{
+  border: rgb(247, 250, 250) 1px solid;
+  width:  200px;
+  padding: 10px;
+  margin: 3px;
+ 
+}
+.estimate2{
+  border: rgb(247, 250, 250) 1px solid;
+  width: 200px;
+  padding: 10px;
+  justify-content: center;
+  
+ 
+
+}
+.estimate1 div{
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(239, 243, 243);
+  padding: 3px;
+  border-radius: 5%;
+  margin: 8px;
+  box-shadow: 12px 12px 10px rgb(104, 81, 81);
+  margin-top: 3px;
+  width: 160px;
+  align-items: center;
+}
+.estimate2 div{
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(248, 248, 248);
+  padding: 3px;
+  border-radius: 5%;
+  box-shadow: 12px 12px 10px rgb(104, 81, 81);
+  margin: 8px;
+  margin-top: 3px;
+  width: 160px;
+  align-items: center;
+}
+
+.estimate div div{
+  color: blue;
+}
+small{
+  font-size: 12px;
+ 
+}
+h3{
+  color: aliceblue;
+  text-orientation: sideways-right;
+  
+}
+h1{
+ text-align: center;
+ color: cornsilk;
+}
+@media(max-width:600px){
   .container{
-    display: grid;
-      grid-gap: 60px;
-          grid-template-columns: 600px 600px;
-          background-color: #fff;
-          color: #444;
-    }
-  .two{
-    margin: 1px auto;
-    max-width: 500px;
-    padding: 5px 10px,10px 5px;
+    grid-template-columns: repeat(1, 1fr);
   }
-  .two li{
-    padding: 0;
-    display: block;
-    list-style: none;
-    margin: 10px 000;
+}
+@media(max-width:600px){
+  .extimate-container{
+    grid-template-columns: repeat(1, 1fr);
   }
-  .two label{
-    margin: 0 03px 0;
-    padding: 0px;
-    display:block;
-    font-weight: bold;
+}
+@media(max-width:600px){
+  .inputs{
+   width: 50%;
   }
-  .two input{
-    width: 100%;
-    padding: 12px 20px;
-    margin: 5px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  .two select{
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  input[type=button]{
-    background-color: #4caf50;
-    color: white;
-    padding: 16px 32px;
-    margin: 4px 2px;
-  }
-  h2{
-    text-align: center;
-    color:burlywood
-    }
-  h3{
-    text-align: center;
-    color:red;
-    }
-    h1{
-      text-align: center;
-      color: green;
-    }
-  p{
-    text-align: center;
-  
-  
-  }
-  
+}
